tests/ui/compile-fail/init/wrong_generics.stderr
error: no rules expected `<`
 --> tests/ui/compile-fail/init/wrong_generics.rs:7:22
  |
7 |     let _ = init!(Foo<()> {
  |                      ^ no rules expected this token in macro call
  |
note: while trying to match `{`
 --> src/lib.rs
  |
  |     ($(&$this:ident in)? $t:ident $(::<$($generics:ty),* $(,)?>)? {
  |                                                                   ^
